--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,1 +1,7 @@
-<h1>Topページ</h1>
+<div class="cover align-middle">
+  <div class="text-center">
+    <h1 class="title mb-2">Musiclyrics</h1>
+    <h2 class="btn btn-primary mr-2">sign up</h2>
+    <h2 class="btn btn-success ml-2">log in</h2>
+  </div>
+</div>
