--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -29,7 +29,8 @@ h1 {
   }
   
   .one-post img:hover {
-    transform: scale(1.2,1.2);
+    transform: none;
+    opacity: 0.7;
   }
   
   .caption {
