--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,7 +15,6 @@
  */
  @import "bootstrap";
  
-
  html,
  body {
    width: 100%;
@@ -30,7 +29,8 @@
 
  header {
   display: flex;
-  background-color: black;
+  background-color: rgb(0, 27, 73);
+  font-family: 'Homemade Apple', cursive;
 }
 
 header div:first-child {
@@ -48,7 +48,7 @@ header div {
 }
 
 a:hover {
-  color: aqua!important;
+  color: rgb(54, 71, 163)!important;
 }
 
 #head-top {
