--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,28 +1,27 @@
 <div class="cover-edit">
   <div class="container">
     <div class="row">
-      <h1 class="font-weight-normal mt-5 mb-5">音楽投稿編集</h1>
+      <h1 class="font-weight-normal mt-5 mb-5">Edits</h1>
     </div>
     <div class="row">
       <%= form_with model: @post, local:true do |f| %>
         <div class="form-group mb-3">
-          <label class="form-label">タイトル</label>
+          <label class="form-label">title</label>
           <%= f.text_field :location, class: "form-control" %>
         </div>
         <div class="form-group mb-3">
-          <label class="form-label">感想</label>
+          <label class="form-label">comment</label>
           <%=f.text_area :text, rows: 10, class: "form-control" %>
         </div>
         <div class="form-group mb-4">
-          <label class="form-label">画像</label><br>
+          <label class="form-label">picture</label><br>
           <% if @post.image.attached? %>
-            <%= image_tag @post.image.variant(resize_to_limit: [450, 350]) %><br>
+            <%= image_tag @post.image %><br>
           <% end %>
-          <label class="form-label">画像を変更する</label><br>
           <%= f.file_field :image %><br>
         </div>
-        <%= f.submit '保存する', class: "btn btn-success" %><br>
-        <%= link_to '投稿詳細ページへ', post_path(@post), class: "btn btn-dark mt-3" %>
+        <%= f.submit '↓', class: "btn btn-success" %><br>
+        <%= link_to 'back', post_path(@post), class: "btn btn-dark mt-3" %>
       <% end %>
     </div>
   </div>
