--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,17 +1,23 @@
 <div class="cover-index">
   <div class="container d-flex flex-column align-items-center">
     <div class="row mt-5">
-      <h1 class="font-weight-normal">音楽投稿一覧</h1>
+      <h1 class="font-weight-normal">all views</h1>
     </div>
-    <div class="row mt-5 index-left w-100">
+
+    <div class="row">
       <% @posts.each do |post| %>
         <div class="one-post col-sm-4 mb-3">
           <%= link_to post_path(post) do %>
-            <p class="caption">ユーザ名</p>
+
             <% if post.image.attached? %>
-              <%= image_tag post.image.variant(resize_to_limit: [300, 200]) %><br>
+              <%= image_tag post.image %><br>
             <% end %>
-            <p class="caption"><%= post.location %></p>
+
+            <p class="caption-row">
+             <%= link_to "name", "#", class: "caption-name" %>
+             <span class="caption-music"><%= post.location %></span>
+            </p>
+
           <% end %>
         </div>
       <% end %>
