--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,19 +1,19 @@
 <div class="cover-show">
   <div class="container">
     <div class="row">
-      <h1 class="font-weight-normal mt-5 mb-5">音楽投稿詳細</h1>
+      <h1 class="font-weight-normal mt-5 mb-5">views</h1>
     </div>
     <div class="d-block">
-      <p class="caption">ユーザ名</p>
-      <% if @post.image.attached? %>
-        <%= image_tag @post.image.variant(resize_to_limit: [450, 350]) %><br>
-      <% end %>
+      <p class="caption">name</p>
       <p class="caption"><%= @post.location %></p>
-      <h2>感想</h2>
+      <% if @post.image.attached? %>
+        <%= image_tag @post.image %><br>
+      <% end %>
+      <p class="caption">comment</p>
       <p id="text"><%= @post.text %></p>
-      <%= link_to '編集する', edit_post_path(@post.id), class: "btn btn-info mr-3" %>
-      <%= link_to '削除する', post_path(@post.id),  data: { turbo_method: :delete, turbo_confirm:  "本当に消しますか？"}, class: "btn btn-danger" %><br>
-      <%= link_to '投稿一覧ページへ', posts_path, class: "btn btn-dark mt-3" %>
+      <%= link_to 'edit', edit_post_path(@post.id), class: "btn btn-info mr-3" %>
+      <%= link_to 'delete', post_path(@post.id),  data: { turbo_method: :delete, turbo_confirm:  "本当に消しますか？"}, class: "btn btn-danger" %><br>
+      <%= link_to '⌂', posts_path, class: "btn btn-dark mt-3" %>
     </div>
   </div>
 </div>
