--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
         <div><%= link_to "TOP", root_path, class: "text-white nav-link" %></div>
         <div><%= link_to "NEW POST", new_post_path, class: "text-white nav-link" %></div>
         <div><%= link_to "HOME", posts_path, class: "text-white nav-link" %></div>
-        <div><%= link_to "sitagaki", confirm_posts_path, class: "text-white nav-link" %></div>
+        <div><%= link_to "DRAFT", confirm_posts_path, class: "text-white nav-link" %></div>
         <div><%= link_to "MEMBER", users_path, class: "text-white nav-link" %></div>
         <div><%= link_to "MY PAGE", user_path(current_user.id), class: "text-white nav-link" %></div>
         <div><%= link_to "log out", destroy_user_session_path, data: { turbo_method: :delete }, class: "text-white nav-link" %></div>
