--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,11 +1,12 @@
-<div class="cover align-middle">
-  <div class="text-center">
-    <h1 class="title mb-2">Musiclyrics</h1>
-    <%= link_to new_user_registration_path do %>
-        <h2 class="btn btn-primary mr-2">sign up</h2>
-    <% end %>
-    <%= link_to new_user_session_path do %>
-      <h2 class="btn btn-success ml-2">log in</h2>
-    <% end %>
+<div class="cover top-hero">
+  <div class="top-center text-center">
+    <h1 class="title mb-3">Musiclyrics</h1>
+
+    <%= link_to "/users/sign_in", class: "play-btn" do %>
+      ▶
+   <% end %>
+
+
+    <p class="sub-title mt-3 mb-0">@Music-</p>
   </div>
 </div>
