--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -1,23 +1,16 @@
- <div class="row mt-5 w-50">
-    <% @users.each do |user| %>
-        <div class="one-post card mt-3">
-          <%= link_to user_path(user) do %>
-            <div class="d-flex">
-              <p class="caption h4"><%= user.name %></p>
-              <p class="caption"><%= "#{user.posts.count} POST" %></p>
-            </div>
-          <% end %>
-  
-          <p class="caption h4 mt-4 ml-2"><%= user.name %></p>
+<div class="row mt-5 w-50">
+  <% @users.each do |user| %>
+    <div class="one-post card mt-3">
+      <%= link_to user_path(user) do %>
+        <div class="d-flex justify-content-between">
+          <p class="caption h4 mb-0"><%= user.name %></p>
+          <p class="caption mb-0"><%= "#{user.posts.published.count} 投稿" %></p>
         </div>
-
-        <%# ★ここが重要：公開(published)だけ数える %>
-        <p class="caption ml-3"><%= "#{user.posts.published.count} 投稿" %></p>
       <% end %>
     </div>
   <% end %>
 </div>
 
 <div class="d-flex justify-content-center mt-4">
-  <%= paginate users %>
+  <%= paginate @users %>
 </div>
