--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,12 +1,8 @@
 <div class="cover top-hero">
-  <div class="top-center text-center">
-    <h1 class="title mb-3">Musiclyrics</h1>
+  <div class="top-center">
 
-    <%= link_to "/users/sign_in", class: "play-btn" do %>
-      ▶
-   <% end %>
+      <%= link_to "/users/sign_in", class: "play-btn" do %> <% end %>
+    </div>
 
-
-    <p class="sub-title mt-3 mb-0">@Music-</p>
   </div>
 </div>
