--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -9,8 +9,8 @@
 }
 
 .play-btn {
-  width: 140px;
-  height: 140px;
+  width: 35px;
+  height: 35px;
   border-radius: 24px;
   display: inline-flex;
   align-items: center;
@@ -19,15 +19,25 @@
   font-size: 64px;
   text-decoration: none;
 
-  background: #fff;
-  border: 1px solid rgba(0,0,0,0.08);
-  box-shadow: 0 10px 30px rgba(0,0,0,0.08);
-  transition: transform .12s ease, box-shadow .12s ease;
+  position: relative;
+  top: 200px;   /* 下に */
+  right: 1px;
+
+  background:rgba(255,255,255,0);
+  box-shadow: none;
+
+  transition: background .15s ease, box-shadow .15s ease, transform .12s ease;
 }
 
 .play-btn:hover {
-  transform: translateY(-2px);
-  box-shadow: 0 14px 36px rgba(0,0,0,0.12);
+  background: rgba(255,255,255,0.25);
+  box-shadow: 0 10px 30px rgba(0,0,0,0.08);
+  transform: scale(1.05);
+}
+
+.play-btn:active {
+  transform: scale(0.92);              /* 小さくなる */
+  box-shadow: 0 4px 12px rgba(0,0,0,0.12);
 }
 
 .sub-title {
