--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,70 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <p><%= f.label :email %></p>
-    <p><%= f.email_field :email, autofocus: true, autocomplete: "email" %></p>
+<div class="auth-wrap">
+  <div class="auth-left">
+    <div class="auth-brand">
+      <h1 class="auth-logo">Musiclyrics</h1>
+      <p class="auth-copy">
+        あなたの好きな歌詞を、記録して語り合おう。
+      </p>
+    </div>
   </div>
 
-  <div class="field">
-    <p><%= f.label :password %></p>
-    <% if @minimum_password_length %>
-      <p><em>(<%= @minimum_password_length %> characters minimum)</em></p>
-    <% end %>
-    <p><%= f.password_field :password, autocomplete: "new-password" %></p>
-  </div>
+  <div class="auth-right">
+    <div class="auth-card">
+      <h2 class="auth-title">新規登録</h2>
+      <p class="auth-sub">新しいアカウントを作成します</p>
 
-  <div class="field">
-    <p><%= f.label :password_confirmation %></p>
-    <p><%= f.password_field :password_confirmation, autocomplete: "new-password" %></p>
-  </div>
+      <% if resource.errors.any? %>
+        <div class="alert alert-danger">
+          <% resource.errors.full_messages.each do |msg| %>
+            <div><%= msg %></div>
+          <% end %>
+        </div>
+      <% end %>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <div class="mb-3">
+          <%= f.label :name, "ユーザー名", class: "form-label" %>
+          <%= f.text_field :name,
+                autocomplete: "name",
+                class: "form-control",
+                required: true %>
+        </div>
 
-<%= render "devise/shared/links" %>
+        <div class="mb-3">
+          <%= f.label :email, "メールアドレス", class: "form-label" %>
+          <%= f.email_field :email,
+                autocomplete: "email",
+                class: "form-control",
+                required: true %>
+        </div>
+
+        <div class="mb-3">
+          <%= f.label :password, "パスワード", class: "form-label" %>
+          <%= f.password_field :password,
+                autocomplete: "new-password",
+                class: "form-control",
+                required: true %>
+        </div>
+
+        <div class="mb-3">
+          <%= f.label :password_confirmation, "パスワード（確認）", class: "form-label" %>
+          <%= f.password_field :password_confirmation,
+                autocomplete: "new-password",
+                class: "form-control",
+                required: true %>
+        </div>
+
+        <div class="d-grid mt-4">
+          <%= f.submit "新規登録", class: "btn btn-primary btn-lg" %>
+        </div>
+      <% end %>
+
+      <div class="text-center mt-3">
+        <span class="text-muted">すでにアカウントをお持ちですか？</span><br>
+        <%= link_to "ログインはこちら", new_user_session_path,
+            class: "auth-link-btn" %>
+
+      </div>
+    </div>
+  </div>
+</div>
