--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,14 +21,12 @@
             <%= image_tag "musiclyrics-horizontal.png", class: "header-logo", alt: "MusicLyrics" %>
           <% end %>
         </div>
-        <div><%= link_to root_path, class: "text-white nav-link" do %>Musiulyics<% end %></div>
-        <div><%= link_to "TOP", root_path, class: "text-white nav-link" %></div>
-        <div><%= link_to "NEW POST", new_post_path, class: "text-white nav-link" %></div>
-        <div><%= link_to "HOME", posts_path, class: "text-white nav-link" %></div>
-        <div><%= link_to "DRAFT", confirm_posts_path, class: "text-white nav-link" %></div>
-        <div><%= link_to "MEMBER", users_path, class: "text-white nav-link" %></div>
-        <div><%= link_to "MY PAGE", user_path(current_user.id), class: "text-white nav-link" %></div>
-        <div><%= link_to "log out", destroy_user_session_path, data: { turbo_method: :delete }, class: "text-white nav-link" %></div>
+        <div><%= link_to "⌂", posts_path, class: "text-white nav-link" %></div>
+        <div><%= link_to "投稿", new_post_path, class: "text-white nav-link" %></div>
+        <div><%= link_to "下書き", confirm_posts_path, class: "text-white nav-link" %></div>
+        <div><%= link_to "ユーザー", users_path, class: "text-white nav-link" %></div>
+        <div><%= link_to "マイページ", user_path(current_user.id), class: "text-white nav-link" %></div>
+        <div><%= link_to "ログアウト", destroy_user_session_path, data: { turbo_method: :delete }, class: "text-white nav-link" %></div>
       </header>
     <% end %>  
     <%= yield %>
