--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,39 +1,56 @@
 <div class="cover-edit">
   <div class="container">
-    <div class="row">
-      <h1 class="font-weight-normal mt-5 mb-5">Edits</h1>
-    </div>
+
+    <h1 class="font-weight-normal mt-5 mb-5">Edit</h1>
+
     <% if @post.errors.any? %>
-      <div class="card text-center text-white bg-danger mb-3">
+      <div class="card text-center text-white bg-danger mb-3 p-3">
         <%= @post.errors.count %>件のエラーが発生しました
-        <% @post.errors.full_messages.each do |message| %>
-          <%= message %>
-        <% end %>
+        <ul>
+          <% @post.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
       </div>
     <% end %>
-    <div class="row">
-      <%= form_with model: @post, local:true do |f| %>
-        <div class="form-group mb-3">
-          <label class="form-label">title</label>
-          <%= f.text_field :title, class: "form-control" %>
-        </div>
-        <div class="form-group mb-3">
-          <label class="form-label">comment</label>
-          <%=f.text_area :text, rows: 10, class: "form-control" %>
-        </div>
-        <div class="form-group mb-4">
-          <label class="form-label">picture</label><br>
-          <% if @post.image.attached? %>
-            <%= image_tag @post.image %><br>
-          <% end %>
-          <%= f.file_field :image %><br>
-        </div>
-        <div class="form-group">
-          <%= f.select :status, Post.statuses.keys.map { |k| [t("enums.post.status.#{k}"),k]}, {}, {class: "custom-select w-25 mb-3"} %>
-        </div>
-        <%= f.submit '↓', class: "btn btn-success" %><br>
-        <%= link_to 'back', post_path(@post), class: "btn btn-dark mt-3" %>
-      <% end %>
-    </div>
+
+    <%= form_with model: @post, local: true do |f| %>
+
+      <div class="form-group mb-3">
+        <label class="form-label">タイトル / アーティスト名</label>
+        <%= f.text_field :title, class: "form-control" %>
+      </div>
+
+      <div class="form-group mb-3">
+        <label class="form-label">歌詞</label>
+        <%= f.text_area :lyrics, rows: 1, class: "form-control" %>
+      </div>
+
+      <div class="form-group mb-3">
+        <label class="form-label">コメント</label>
+        <%= f.text_area :comment, rows: 6, class: "form-control" %>
+      </div>
+
+      <div class="form-group mb-4">
+        <label class="form-label">写真</label><br>
+        <% if @post.image.attached? %>
+          <%= image_tag @post.image, class: "img-fluid mb-2" %><br>
+        <% end %>
+        <%= f.file_field :image %>
+      </div>
+
+      <div class="form-group mb-3">
+        <%= f.select :status,
+          Post.statuses.keys.map { |k| [t("enums.post.status.#{k}"), k] },
+          {},
+          class: "custom-select w-25"
+        %>
+      </div>
+
+      <%= f.submit "更新", class: "btn btn-success" %>
+      <%= link_to "戻る", post_path(@post), class: "btn btn-dark ms-2" %>
+
+    <% end %>
+
   </div>
 </div>
