--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,7 +1,7 @@
 <div class="cover-new">
   <div class="container d-flex flex-column align-items-center">
     <div class="row mt-5">
-      <h1 class="font-weight-normal">NEW POST</h1>
+      <h1 class="font-weight-normal">新規投稿</h1>
     </div>
     <% if @post.errors.any? %>
       <div class="card text-center text-white bg-danger mt-3">
@@ -14,15 +14,19 @@
     <div class="row mt-5">
       <%= form_with model: @post, local:true do |f| %>
         <div class="form-group mb-3">
-          <label class="form-label">title</label>
+          <label class="form-label">タイトル/アーティスト名</label>
           <%= f.text_field :location, class: "form-control" %>
         </div>
         <div class="form-group mb-3">
-          <label class="form-label">comment</label>
+          <label class="form-label">歌詞</label>
+          <%=f.text_area :text, rows: 1, class: "form-control" %>
+        </div>
+        <div class="form-group mb-3">
+          <label class="form-label">コメント</label>
           <%=f.text_area :text, rows: 10, class: "form-control" %>
         </div>
         <div class="form-group mb-3">
-          <label class="form-label">picture</label><br>
+          <label class="form-label">写真</label><br>
           <%= f.file_field :image %>
         </div>
         <div class="form-group">
