--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -17,8 +17,13 @@
     <%= form_with model: @post, local: true do |f| %>
 
       <div class="form-group mb-3">
-        <label class="form-label">タイトル / アーティスト名</label>
+        <label class="form-label">タイトル</label>
         <%= f.text_field :title, class: "form-control" %>
+      </div>
+
+      <div class="form-group mb-3">
+        <label class="form-label">アーティスト名</label>
+        <%= f.text_field :artist_name, class: "form-control" %>
       </div>
 
       <div class="form-group mb-3">
